--- a/ExamplesC15-28.6.html
+++ b/ExamplesC15-28.6.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ExampleC1</title>
+    <title>ExampleC15-layout</title>
 </head>
 <style>
    /* body {
