--- a/ExamplesC17-28.6.html
+++ b/ExamplesC17-28.6.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Examples-C17</title>
+    <title>ExamplesC17-HTML5 Layout</title>
 </head>
 <style>
 header,nav,section, figure,figcaption,aside, footer,article{
