Add HTML Inspector

--- a/ExamplesC17-28.6.html
+++ b/ExamplesC17-28.6.html
@@ -182,5 +182,7 @@ footer {
 
 
     </div>
+<script src="path/to/html-inspector.js"></script>
+<script> HTMLInspector.inspect() </script>
 </body>
 </html>
