--- a/index.html
+++ b/index.html
@@ -34,8 +34,12 @@
                 </div>
                 </header>
                 <div class="signup">
-                    <p class="save">Save 90%</p>
-                    <p class="getacc">Get account of $59 <img src="image/mui ten ngang.png" /></p> </div>
+                    <div class="save">
+                         <p>Save 90%</p>
+                    </div>
+                    <div class="getacc">
+                        <p>Get account of $59 <img src="image/arrow.png" /></p> </div>
+                    </div>                    
                 <h1>Manage the team everyone wants to be on</h1>
                 <p class="simple">Simple platform that lets you master what great managers do best, as develop trust, collaborate, and drive team performance</p>
                 <div class="box">
@@ -59,8 +63,10 @@
                     <img class="timeline" src="image/timeline.png" alt="timeline">
                     <div class="advantage">
                         <div class="survey-feature">
+                            <div class="text">
                             <h4>Survey your team</h4> 
                             <p>Powerful questions that get to the heart of how team members really feel.</p>
+                            </div>
                         </div>
                         <div class="ad-feature">
                             <h4>Resolve issues quickly</h4>
