--- a/Practice01/src/index.html
+++ b/Practice01/src/index.html
@@ -15,33 +15,32 @@
 </style>
 <body>
     <div class="container">
-        <div class="wrapper">
             <div class="banner" >
                  <header>
-                <img src="../src/assets/image/team.flow.png" alt="team.flow"/>
-                <nav>
-                <ul>
-                    <li>How it Works <img src="../src/assets/image/down.png"/></li>
-                    <li>Product <img src="../src/assets/image/down.png"/></li>
-                    <li>Pricing </li>
+                  <p class="logo">team.flow</p>
+                <!--<img class="logo" src="../src/assets/image/team.flow.png" alt="team.flow" style="width: 92px; height: 24px;"/>-->
+                <nav class="header_nav">
+                <ul class="header_navlist">
+                    <li style="margin-right: 45px; width: 100px;height: 16px;">How it Works <img src="../src/assets/image/down.png"/></li>
+                    <li style="margin-right: 48px;">Product <img src="../src/assets/image/down.png"/></li>
+                    <li style="margin-right: 39px;">Pricing </li>
                     <li>Resources <img src="../src/assets/image/down.png"/></li>
-                </ul>
-                </nav>
-                <div class="login-getfree">
-                    <a href="#">Login</a>
+                </ul></nav>
+                <div class="header__login-getfree">
+                    <a href="#">Log in</a>
                     <a href="#" class="active">Get started free</a>
                 </div>
                 </header>
-                <div class="signup">
-                    <div class="save">
+                <div class="banner__signup">
+                    <div class="banner__save">
                          <p>Save 90%</p>
                     </div>
-                    <div class="getacc">
+                    <div class="banner__getacc">
                         <p>Get account of $59 <img src="../src/assets/image/arrow.png" /></p> </div>
                     </div>
                 <h1>Manage the team everyone wants to be on</h1>
-                <p class="simple">Simple platform that lets you master what great managers do best, as develop trust, collaborate, and drive team performance</p>
-                <div class="box">
+                <p class="banner__simpletext">Simple platform that lets you master what great managers do best, as develop trust, collaborate, and drive team performance</p>
+                <div class="banner__box">
                     <input id="text" type="text" placeholder="name@yourcompany.com"/>
                     <input id="submit"type="submit" value="Try it free"/>
                 </div>
@@ -228,10 +227,9 @@
                         <img class="icon" src="assets/image/youtube.png">
                     </div>
                 </div>
-            </footer>
-            </div>
+              </footer>
         </div>
-    </div>
+
     <script src="http://cdnjs.cloudflare.com/ajax/libs/html-inspector/0.8.2/html-inspector.js"></script>
 </body>
 </html>
