--- a/Practice01/src/index.html
+++ b/Practice01/src/index.html
@@ -17,7 +17,7 @@
     <div class="container">
             <div class="banner" >
                  <header>
-                  <p class="logo">team.flow</p>
+                  <p class="header__logo">team.flow</p>
                 <!--<img class="logo" src="../src/assets/image/team.flow.png" alt="team.flow" style="width: 92px; height: 24px;"/>-->
                 <nav class="header_nav">
                 <ul class="header_navlist">
@@ -44,10 +44,10 @@
                     <input id="text" type="text" placeholder="name@yourcompany.com"/>
                     <input id="submit"type="submit" value="Try it free"/>
                 </div>
-                    <img class="graph" src="./assets/image/graph.png" alt="Graph 2 1"/>
+                    <img class="graph" src="./assets/image/graph.jpg" alt="Graph 2 1"/>
                 <div class="medialogo">
                     <p>TRUSTED BY OVER <b>10.000+</b> WORLD'S BEST TEAMS</p> <br>
-                    <div class="logo">
+                    <div class="banner__logo">
                         <img class="gg" src="assets/image/google.png" alt="google" width="80px" height="26.11px">
                         <img class="air" src="../src/assets/image/airbnb.png" alt="airbnb" width="80px" height="24.96px">
                         <img class="fb" src="./assets/image/fb.png" alt ="facebook" width="77.17px" height="15.82px">
@@ -79,7 +79,7 @@
                             </div>
                         <div class="ad-feature">
                             <h4>Track your progress</h4>
-                            <p>Easy-to-read reports and sharable results help managers and teams.</p>
+                            <p >Easy-to-read reports and sharable results help managers and teams.</p>
                         </div>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
                     </div>
                 </div>
                 <div class="charts">
-                    <div class="chart-content">
+                    <div class="chart__content">
                     <h2> We work how you
                         work everyday</h2>
                     <p style="width: 413px;height: 72px;">Since the easiest things to use actually get used, we adapts to the way your team works – not the other way around.</p>
@@ -142,7 +142,7 @@
                     <p>“It's amazing what has helped me learn about my team.
                         I don't worry about blindspots anymore, and 1-on-1s have never
                         been more productive. The team loves it.”</p>
-                    <img src="assets/image/cust-line.png" style="margin-left: 244px; margin-top: 48px;"></div>
+                    <img src="assets/image/cust-line.png" style="margin-left: 244px; margin-top: 30px;"></div>
                     <div class="customers-feedbacks">
                         <div class="customer-pro">
                             <div>
@@ -187,7 +187,7 @@
                     <div class="column1">
                         <h6>Company</h6>
                         <ul>
-                            <li><a href="#">About us</a></li>
+                            <li><a href="#">About Us</a></li>
                             <li><a href="#">Blog</a></li>
                             <li><a href="#">Careers</a></li>
                             <li><a href="#">Contact Us</a></li>
@@ -212,12 +212,12 @@
                     <div class="column4">
                         <h6>Install App</h6>
                         <div class="footer-installapp">
-                            <img class="footer-ggplay" src="assets/image/footer-ggplay.png">
-                            <img src="assets/image/footer-appstore.png">
+                            <img class="footer__ggplay" src="assets/image/footer-ggplay.png">
+                            <img class="footer__appstore" src="assets/image/footer-appstore.png">
                         </div>
                     </div>
                 </div>
-                <hr style="opacity: 10%;">
+                <hr style="opacity: 10%; margin-top: 54px;">
                 <div class="copy-right">
                     <p style="width: 540px;height: 14px;">© 2020 - All rights reserved</p>
                     <div class="social-icon">
