--- a/Practice01/src/index.html
+++ b/Practice01/src/index.html
@@ -7,45 +7,42 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
 </head>
 <style>
 </style>
 <body>
     <div class="container">
-            <div class="banner" >
-                 <header>
-                  <p class="header__logo">team.flow</p>
-                <!--<img class="logo" src="../src/assets/image/team.flow.png" alt="team.flow" style="width: 92px; height: 24px;"/>-->
-                <nav class="header_nav">
-                <ul class="header_navlist">
-                    <li style="margin-right: 45px; width: 100px;height: 16px;">How it Works <img src="../src/assets/image/down.png"/></li>
-                    <li style="margin-right: 48px;">Product <img src="../src/assets/image/down.png"/></li>
-                    <li style="margin-right: 39px;">Pricing </li>
-                    <li>Resources <img src="../src/assets/image/down.png"/></li>
-                </ul></nav>
-                <div class="header__login-getfree">
+        <div class="banner" >
+            <header>
+                <p class="header__logo">team.flow</p>
+                <nav class="header__nav">
+                    <ul class="header__nav-list">
+                        <li style="margin-right: 45px; width: 100px;height: 16px;">How it Works <img src="../src/assets/image/down.png" alt="" /></li>
+                        <li style="margin-right: 48px;">Product <img src="../src/assets/image/down.png"/></li>
+                        <li style="margin-right: 39px;">Pricing </li>
+                        <li>Resources <img src="../src/assets/image/down.png"/></li>
+                    </ul>
+                </nav>
+                <div class="header__login-get-free">
                     <a href="#">Log in</a>
                     <a href="#" class="active">Get started free</a>
                 </div>
-                </header>
-                <div class="banner__signup">
-                    <div class="banner__save">
-                         <p>Save 90%</p>
-                    </div>
-                    <div class="banner__getacc">
-                        <p>Get account of $59 <img src="../src/assets/image/arrow.png" /></p> </div>
-                    </div>
+            </header>
+            <div class="banner__sign-up">
+                <div class="banner__save">
+                    <p>Save 90%</p>
+                </div>
+                <div class="banner__get-acc">
+                    <p>Get account of $59 <img src="../src/assets/image/arrow.png" /></p> </div>
+                </div>
                 <h1>Manage the team everyone wants to be on</h1>
-                <p class="banner__simpletext">Simple platform that lets you master what great managers do best, as develop trust, collaborate, and drive team performance</p>
+                <p class="banner__simple-text">Simple platform that lets you master what great managers do best as   develop trust, collaborate, and drive team performance</p>
                 <div class="banner__box">
                     <input id="text" type="text" placeholder="name@yourcompany.com"/>
                     <input id="submit"type="submit" value="Try it free"/>
                 </div>
-                    <img class="graph" src="./assets/image/graph.jpg" alt="Graph 2 1"/>
-                <div class="medialogo">
+                <img class="graph" src="./assets/image/graph.png" alt="Graph"/>
+                <div class="banner__media-logo">
                     <p>TRUSTED BY OVER <b>10.000+</b> WORLD'S BEST TEAMS</p> <br>
                     <div class="banner__logo">
                         <img class="gg" src="assets/image/google.png" alt="google" width="80px" height="26.11px">
@@ -56,26 +53,25 @@
                     </div>
                 </div>
             </div>
-            <div class="contentarea">
-                <div class="introproduct"  >
+            <div class="content-area">
+                <div class="content-area__intro-product"  >
                     <img class="timeline" src="./assets/image/timeline.png" alt="timeline">
                     <div class="advantage">
                         <div class="survey-feature">
                             <div class="text">
-                            <h4>Survey your team</h4>
-                            <p>Powerful questions that get to the heart of how team members really feel.</p>
+                                <h4>Survey your team</h4>
+                                <p>Powerful questions that get to the heart of how team members really feel.</p>
                             </div>
                         </div>
                         <div class="ad-feature">
                             <h4>Resolve issues quickly</h4>
                             <p>Anonymous messaging that connects managers and employees.</p>
-                            <img class="line" src="./assets/image/Line 1.png">
+                            <img class="line" src="./assets/image/line-ad-feature.png">
                         </div>
                         <div class="ad-feature">
                             <h4>Plan your 1-on-1s</h4>
-                            <p>Plan meetings together and give a stake
-                                employees and teams.</p>
-                            <img class="line" src="./assets/image/Line 1.png">
+                            <p>Plan meetings together and give a stake employees and teams.</p>
+                            <img class="line" src="./assets/image/line-ad-feature.png">
                             </div>
                         <div class="ad-feature">
                             <h4>Track your progress</h4>
@@ -83,7 +79,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="functions">
+                <div class="content-area__functions">
                     <h2>Make your work easier</h2><br>
                     <div class="row">
                         <div class="row1">
@@ -95,8 +91,7 @@
                             <div class="feature">
                                 <img src="./assets/image/collab.png">
                                 <h5>Collaborative 1:1</h5>
-                                <p style="width: 230px; height: 48px;">Build relationships by planning
-                                    1-on-1s and start meetings.</p>
+                                <p style="width: 230px; height: 48px;">Build relationships by planning 1-on-1s and start meetings.</p>
                             </div>
                             <div class="feature">
                                 <img src="./assets/image/center.png">
@@ -113,36 +108,31 @@
                             <div class="feature">
                                 <img src="./assets/image/conver.png">
                                 <h5>Conversation Engine</h5>
-                                <p style="width: 231px; height: 48px;">Communicate confidently with
-                                    recommended talking points.</p>
+                                <p style="width: 231px; height: 48px;">Communicate confidently with recommended talking points.</p>
                                 </div>
                             <div class="feature">
                                 <img src="./assets/image/manage.png">
                                 <h5>Exclusives Manager</h5>
-                                <p style="width: 316px;height: 48px;">Access manager tips, activities and
-                                    best practices from our team of experts.</p>
+                                <p style="width: 316px;height: 48px;">Access manager tips, activities and best practices from our team of experts.</p>
                                 </div>
                         </div>
                     </div>
                 </div>
-                <div class="charts">
+                <div class="content-area__charts">
                     <div class="chart__content">
-                    <h2> We work how you
-                        work everyday</h2>
-                    <p style="width: 413px;height: 72px;">Since the easiest things to use actually get used, we adapts to the way your team works – not the other way around.</p>
-                    <button type="submit">Get started free</button></div>
+                        <h2> We work how you work everyday</h2>
+                        <p style="width: 413px;height: 72px;">Since the easiest things to use actually get used, we adapts to the way your team works – not the other way around.</p>
+                        <button type="submit">Get started free</button>
+                    </div>
                     <div class="chart-image">
-                     <img src="assets/image/charts.png">
+                        <img src="assets/image/charts.png">
                     </div>
                 </div>
-                <div class="about-us">
-                    <div class="aboutus-content">
-                    <h2 style="width: 394px;height: 96px;">Why customers love
-                        working with us</h2>
-                    <p>“It's amazing what has helped me learn about my team.
-                        I don't worry about blindspots anymore, and 1-on-1s have never
-                        been more productive. The team loves it.”</p>
-                    <img src="assets/image/cust-line.png" style="margin-left: 244px; margin-top: 30px;"></div>
+                <div class="content-area__about-us">
+                    <div class="about-us-content">
+                        <h2 style="width: 394px;height: 96px;">Why customers love working with us</h2>
+                        <p>“It's amazing what has helped me learn about my team. I don't worry about blindspots anymore, and 1-on-1s have never been more productive. The team loves it.”</p>
+                        <img src="assets/image/cust-line.png" style="margin-left: 244px; margin-top: 30px;"></div>
                     <div class="customers-feedbacks">
                         <div class="customer-pro">
                             <div>
@@ -173,14 +163,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="install-section">
-                    <h3 style="width: 423px; height: 96px;">84% of employees who use
-                        trust their direct manager</h3>
+                <div class="content-area__install-section">
+                    <h3 style="width: 423px; height: 96px;">84% of employees who use trust their direct manager</h3>
                     <div class="install-app">
                         <img class="ggplay" src="./assets/image/ggplay.png">
                         <img src="assets/image/appstore.png">
                     </div>
-                    </div>
+                </div>
             </div>
             <footer>
                 <div class="column">
@@ -212,8 +201,8 @@
                     <div class="column4">
                         <h6>Install App</h6>
                         <div class="footer-installapp">
-                            <img class="footer__ggplay" src="assets/image/footer-ggplay.png">
-                            <img class="footer__appstore" src="assets/image/footer-appstore.png">
+                            <img class="footer__gg-play" src="assets/image/footer-ggplay.png">
+                            <img class="footer__app-store" src="assets/image/footer-appstore.png">
                         </div>
                     </div>
                 </div>
@@ -229,7 +218,7 @@
                 </div>
               </footer>
         </div>
-
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/html-inspector/0.8.2/html-inspector.js"></script>
+        <script src="../html-inspector.js"></script>
+        <script>HTMLInspector.inspect()</script>
 </body>
 </html>
