--- a/Practice01/src/index.html
+++ b/Practice01/src/index.html
@@ -45,11 +45,21 @@
                 <div class="banner__media-logo">
                     <p>TRUSTED BY OVER <b>10.000+</b> WORLD'S BEST TEAMS</p> <br>
                     <div class="banner__logo">
-                        <img class="gg" src="assets/image/google.png" alt="google" width="80px" height="26.11px">
-                        <img class="air" src="../src/assets/image/airbnb.png" alt="airbnb" width="80px" height="24.96px">
-                        <img class="fb" src="./assets/image/fb.png" alt ="facebook" width="77.17px" height="15.82px">
-                        <img class="hub" src="./assets/image/hubspot.png" alt="hub" width="80px" height="23.3px">
-                        <img class="slack" src="./assets/image/slack.png" alt="slack" width="80px" height="20.24px">
+                        <div style="width: 80px; height: 26.11px;">
+                            <img class="gg" src="assets/image/google.png" alt="google" width="100%" height="100%"/>
+                        </div>
+                        <div style="width: 80px; height:24.96px" >
+                            <img class="air" src="../src/assets/image/airbnb.png" alt="airbnb" width="100%" height="100%">
+                        </div>
+                        <div style="width:77.17px; height: 15.82px" >
+                            <img class="fb" src="./assets/image/fb.png" alt ="facebook" width="100%" height="100%">
+                        </div>
+                        <div style="width: 80px;height: 23.3px;">
+                            <img class="hub" src="./assets/image/hubspot.png" alt="hub" width="100%" height="100%">
+                        </div>
+                        <div style="width: 80px; height: 20.24px;">
+                            <img class="slack" src="./assets/image/slack.png" alt="slack" width="100%" height="100%">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -81,40 +91,36 @@
                 </div>
                 <div class="content-area__functions">
                     <h2>Make your work easier</h2><br>
-                    <div class="row">
-                        <div class="row1">
-                            <div class="feature">
-                                <img src="./assets/image/report.png">
-                                <h5>Team Surveys & Reports</h5>
-                                <p style="width: 306px; height: 48px;">Short, anonymous surveys track your team's needs weekly so you can focus</p>
-                            </div>
-                            <div class="feature">
-                                <img src="./assets/image/collab.png">
-                                <h5>Collaborative 1:1</h5>
-                                <p style="width: 230px; height: 48px;">Build relationships by planning 1-on-1s and start meetings.</p>
-                            </div>
-                            <div class="feature">
-                                <img src="./assets/image/center.png">
-                                <h5>Learning Center</h5>
-                                <p style="width: 322px; height: 48px;">Quickly get solutions tailored to your personal challenges from the manager.</p>
-                            </div>
+                    <div class="feature__container">
+                        <div class="feature">
+                            <img src="./assets/image/report.png">
+                            <h5>Team Surveys & Reports</h5>
+                            <p>Short, anonymous surveys track your team's needs weekly so you can focus</p>
                         </div>
-                        <div class="row2">
-                            <div class="feature">
-                                <img src="./assets/image/mess.png">
-                                <h5>Anonymous Messaging</h5>
-                                <p style="width: 311px; height: 48px;">Develop trust in a safe channel for important conversations.</p>
-                            </div>
-                            <div class="feature">
-                                <img src="./assets/image/conver.png">
-                                <h5>Conversation Engine</h5>
-                                <p style="width: 231px; height: 48px;">Communicate confidently with recommended talking points.</p>
-                                </div>
-                            <div class="feature">
-                                <img src="./assets/image/manage.png">
-                                <h5>Exclusives Manager</h5>
-                                <p style="width: 316px;height: 48px;">Access manager tips, activities and best practices from our team of experts.</p>
-                                </div>
+                        <div class="feature">
+                            <img src="./assets/image/collab.png">
+                            <h5>Collaborative 1:1</h5>
+                            <p>Build relationships by planning 1-on-1s and start meetings.</p>
+                        </div>
+                        <div class="feature">
+                            <img src="./assets/image/center.png">
+                            <h5>Learning Center</h5>
+                            <p>Quickly get solutions tailored to your personal challenges from the manager.</p>
+                        </div>
+                        <div class="feature">
+                            <img src="./assets/image/mess.png">
+                            <h5>Anonymous Messaging</h5>
+                            <p>Develop trust in a safe channel for important conversations.</p>
+                        </div>
+                        <div class="feature">
+                            <img src="./assets/image/conver.png">
+                            <h5>Conversation Engine</h5>
+                            <p>Communicate confidently with recommended talking points.</p>
+                        </div>
+                        <div class="feature">
+                            <img src="./assets/image/manage.png">
+                            <h5>Exclusives Manager</h5>
+                            <p>Access manager tips, activities and best practices from our team of experts.</p>
                         </div>
                     </div>
                 </div>
@@ -132,7 +138,7 @@
                     <div class="about-us-content">
                         <h2 style="width: 394px;height: 96px;">Why customers love working with us</h2>
                         <p>“It's amazing what has helped me learn about my team. I don't worry about blindspots anymore, and 1-on-1s have never been more productive. The team loves it.”</p>
-                        <img src="assets/image/cust-line.png" style="margin-left: 244px; margin-top: 30px;"></div>
+                        <img src="assets/image/cust-line.png" style="margin-left: 244px; margin-top: 47px;"></div>
                     <div class="customers-feedbacks">
                         <div class="customer-pro">
                             <div>
@@ -166,14 +172,14 @@
                 <div class="content-area__install-section">
                     <h3 style="width: 423px; height: 96px;">84% of employees who use trust their direct manager</h3>
                     <div class="install-app">
-                        <img class="ggplay" src="./assets/image/ggplay.png">
-                        <img src="assets/image/appstore.png">
+                        <img class="gg-play" src="./assets/image/ggplay.png">
+                        <img class="apps-tore"src="assets/image/appstore.png">
                     </div>
                 </div>
             </div>
             <footer>
-                <div class="column">
-                    <div class="column1">
+                <div class="footer__content">
+                    <div class="company">
                         <h6>Company</h6>
                         <ul>
                             <li><a href="#">About Us</a></li>
@@ -182,7 +188,7 @@
                             <li><a href="#">Contact Us</a></li>
                         </ul>
                     </div>
-                    <div class="column2">
+                    <div class="support">
                         <h6>Support</h6>
                         <ul>
                             <li><a href="#">Help Center</a></li>
@@ -190,7 +196,7 @@
                             <li><a href="#">Community</a></li>
                         </ul>
                     </div>
-                    <div class="column3">
+                    <div class="legal">
                         <h6>Legal</h6>
                         <ul>
                             <li><a href="#">Cookies Policy</a></li>
@@ -198,15 +204,15 @@
                             <li><a href="#">Terms of Service</a></li>
                         </ul>
                     </div>
-                    <div class="column4">
+                    <div class="app">
                         <h6>Install App</h6>
-                        <div class="footer-installapp">
+                        <div class="footer__install-app">
                             <img class="footer__gg-play" src="assets/image/footer-ggplay.png">
                             <img class="footer__app-store" src="assets/image/footer-appstore.png">
                         </div>
                     </div>
                 </div>
-                <hr style="opacity: 10%; margin-top: 54px;">
+                <hr style="opacity: 10%; margin-top: 55px;">
                 <div class="copy-right">
                     <p style="width: 540px;height: 14px;">© 2020 - All rights reserved</p>
                     <div class="social-icon">
