--- a/Practice01/src/index.html
+++ b/Practice01/src/index.html
@@ -20,7 +20,7 @@
                         <li style="margin-right: 45px; width: 100px;height: 16px;">How it Works <img src="../src/assets/image/down.png" alt="" /></li>
                         <li style="margin-right: 48px;">Product <img src="../src/assets/image/down.png"/></li>
                         <li style="margin-right: 39px;">Pricing </li>
-                        <li>Resources <img src="../src/assets/image/down.png"/></li>
+                        <li>Resources <img src="../src/assets/image/down.png" alt =""/></li>
                     </ul>
                 </nav>
                 <div class="header__login-get-free">
@@ -33,7 +33,7 @@
                     <p>Save 90%</p>
                 </div>
                 <div class="banner__get-acc">
-                    <p>Get account of $59 <img src="../src/assets/image/arrow.png" /></p> </div>
+                    <p>Get account of $59 <img src="../src/assets/image/arrow.png" alt="get account of $59" /></p> </div>
                 </div>
                 <h1>Manage the team everyone wants to be on</h1>
                 <p class="banner__simple-text">Simple platform that lets you master what great managers do best as   develop trust, collaborate, and drive team performance</p>
@@ -41,7 +41,9 @@
                     <input id="text" type="text" placeholder="name@yourcompany.com"/>
                     <input id="submit"type="submit" value="Try it free"/>
                 </div>
-                <img class="graph" src="./assets/image/graph.png" alt="Graph"/>
+                <div>
+                    <img class="graph" src="./assets/image/graph.png" alt="Graph"/>
+                </div>
                 <div class="banner__media-logo">
                     <p>TRUSTED BY OVER <b>10.000+</b> WORLD'S BEST TEAMS</p> <br>
                     <div class="banner__logo">
@@ -49,23 +51,25 @@
                             <img class="gg" src="assets/image/google.png" alt="google" width="100%" height="100%"/>
                         </div>
                         <div style="width: 80px; height:24.96px" >
-                            <img class="air" src="../src/assets/image/airbnb.png" alt="airbnb" width="100%" height="100%">
+                            <img class="air" src="../src/assets/image/airbnb.png" alt="airbnb" width="100%" height="100%"/>
                         </div>
                         <div style="width:77.17px; height: 15.82px" >
-                            <img class="fb" src="./assets/image/fb.png" alt ="facebook" width="100%" height="100%">
+                            <img class="fb" src="./assets/image/fb.png" alt ="facebook" width="100%" height="100%"/>
                         </div>
                         <div style="width: 80px;height: 23.3px;">
-                            <img class="hub" src="./assets/image/hubspot.png" alt="hub" width="100%" height="100%">
+                            <img class="hub" src="./assets/image/hubspot.png" alt="hub" width="100%" height="100%"/>
                         </div>
                         <div style="width: 80px; height: 20.24px;">
-                            <img class="slack" src="./assets/image/slack.png" alt="slack" width="100%" height="100%">
+                            <img class="slack" src="./assets/image/slack.png" alt="slack" width="100%" height="100%"/>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="content-area">
-                <div class="content-area__intro-product"  >
-                    <img class="timeline" src="./assets/image/timeline.png" alt="timeline">
+                <div class="content-area__intro-product">
+                    <div>
+                        <img class="timeline" src="./assets/image/timeline.png" alt="timeline"/>
+                    </div>
                     <div class="advantage">
                         <div class="survey-feature">
                             <div class="text">
@@ -76,12 +80,12 @@
                         <div class="ad-feature">
                             <h4>Resolve issues quickly</h4>
                             <p>Anonymous messaging that connects managers and employees.</p>
-                            <img class="line" src="./assets/image/line-ad-feature.png">
+                            <img class="line" src="./assets/image/line-ad-feature.png" alt=""/>
                         </div>
                         <div class="ad-feature">
                             <h4>Plan your 1-on-1s</h4>
                             <p>Plan meetings together and give a stake employees and teams.</p>
-                            <img class="line" src="./assets/image/line-ad-feature.png">
+                            <img class="line" src="./assets/image/line-ad-feature.png" alt=""/>
                             </div>
                         <div class="ad-feature">
                             <h4>Track your progress</h4>
@@ -93,32 +97,32 @@
                     <h2>Make your work easier</h2><br>
                     <div class="feature__container">
                         <div class="feature">
-                            <img src="./assets/image/report.png">
+                            <img src="./assets/image/report.png" alt=""/>
                             <h5>Team Surveys & Reports</h5>
                             <p>Short, anonymous surveys track your team's needs weekly so you can focus</p>
                         </div>
                         <div class="feature">
-                            <img src="./assets/image/collab.png">
+                            <img src="./assets/image/collab.png" alt=""/>
                             <h5>Collaborative 1:1</h5>
                             <p>Build relationships by planning 1-on-1s and start meetings.</p>
                         </div>
                         <div class="feature">
-                            <img src="./assets/image/center.png">
+                            <img src="./assets/image/center.png" alt=""/>
                             <h5>Learning Center</h5>
                             <p>Quickly get solutions tailored to your personal challenges from the manager.</p>
                         </div>
                         <div class="feature">
-                            <img src="./assets/image/mess.png">
+                            <img src="./assets/image/mess.png" alt=""/>
                             <h5>Anonymous Messaging</h5>
                             <p>Develop trust in a safe channel for important conversations.</p>
                         </div>
                         <div class="feature">
-                            <img src="./assets/image/conver.png">
+                            <img src="./assets/image/conver.png" alt=""/>
                             <h5>Conversation Engine</h5>
                             <p>Communicate confidently with recommended talking points.</p>
                         </div>
                         <div class="feature">
-                            <img src="./assets/image/manage.png">
+                            <img src="./assets/image/manage.png" alt=""/>
                             <h5>Exclusives Manager</h5>
                             <p>Access manager tips, activities and best practices from our team of experts.</p>
                         </div>
@@ -131,18 +135,18 @@
                         <button type="submit">Get started free</button>
                     </div>
                     <div class="chart-image">
-                        <img src="assets/image/charts.png">
+                        <img src="assets/image/charts.png" alt=""/>
                     </div>
                 </div>
                 <div class="content-area__about-us">
                     <div class="about-us-content">
                         <h2 style="width: 394px;height: 96px;">Why customers love working with us</h2>
                         <p>“It's amazing what has helped me learn about my team. I don't worry about blindspots anymore, and 1-on-1s have never been more productive. The team loves it.”</p>
-                        <img src="assets/image/cust-line.png" style="margin-left: 244px; margin-top: 47px;"></div>
+                        <img src="assets/image/cust-line.png" alt="" style="margin-left: 244px; margin-top: 47px;"/></div>
                     <div class="customers-feedbacks">
                         <div class="customer-pro">
                             <div>
-                                <img class="customer-ava" src="assets/image/jorge.png">
+                                <img class="customer-ava" src="assets/image/jorge.png" alt=""/>
                             </div>
                             <div class="name-job">
                                 <p class="name" >Jorge Robertson</p>
@@ -151,7 +155,7 @@
                         </div>
                         <div class="customer-pro">
                             <div>
-                                <img class="customer-ava" src="assets/image/bell.png">
+                                <img class="customer-ava" src="assets/image/bell.png" alt=""/>
                             </div>
                             <div class="name-job">
                                 <p class="name">Francisco Bell</p>
@@ -160,7 +164,7 @@
                         </div>
                         <div class="customer-pro">
                             <div>
-                                <img class="customer-ava" src="assets/image/beth.png">
+                                <img class="customer-ava" src="assets/image/beth.png" alt=""/>
                             </div>
                             <div class="name-job">
                                 <p class="name" >Beth Fox</p>
@@ -172,8 +176,8 @@
                 <div class="content-area__install-section">
                     <h3 style="width: 423px; height: 96px;">84% of employees who use trust their direct manager</h3>
                     <div class="install-app">
-                        <img class="gg-play" src="./assets/image/ggplay.png">
-                        <img class="apps-tore"src="assets/image/appstore.png">
+                        <img class="gg-play" src="./assets/image/ggplay.png" alt=""/>
+                        <img class="app-store"src="assets/image/appstore.png" alt=""/>
                     </div>
                 </div>
             </div>
@@ -207,8 +211,8 @@
                     <div class="app">
                         <h6>Install App</h6>
                         <div class="footer__install-app">
-                            <img class="footer__gg-play" src="assets/image/footer-ggplay.png">
-                            <img class="footer__app-store" src="assets/image/footer-appstore.png">
+                            <img class="footer__gg-play" src="assets/image/footer-ggplay.png" alt=""/>
+                            <img class="footer__app-store" src="assets/image/footer-appstore.png" alt=""/>
                         </div>
                     </div>
                 </div>
@@ -216,10 +220,10 @@
                 <div class="copy-right">
                     <p style="width: 540px;height: 14px;">© 2020 - All rights reserved</p>
                     <div class="social-icon">
-                        <img class="icon" src="assets/image/ins.png">
-                        <img class="icon"  src="assets/image/basketball.png">
-                        <img class="icon" src="assets/image/twitter.png">
-                        <img class="icon" src="assets/image/youtube.png">
+                        <img class="icon" src="assets/image/ins.png" alt=""/>
+                        <img class="icon" src="assets/image/basketball.png" alt=""/>
+                        <img class="icon" src="assets/image/twitter.png" alt=""/>
+                        <img class="icon" src="assets/image/youtube.png" alt=""/>
                     </div>
                 </div>
               </footer>
