Fix warning console

--- a/Practice01/src/index.html
+++ b/Practice01/src/index.html
@@ -41,8 +41,8 @@
                     <input id="text" type="text" placeholder="name@yourcompany.com"/>
                     <input id="submit"type="submit" value="Try it free"/>
                 </div>
-                <div>
-                    <img class="graph" src="./assets/image/graph.png" alt="Graph"/>
+                <div style="width: 920px; height: 654.29px">
+                    <img class="graph" src="./assets/image/graph.png" alt="Graph" style="width: 100%; height: 100%"/>
                 </div>
                 <div class="banner__media-logo">
                     <p>TRUSTED BY OVER <b>10.000+</b> WORLD'S BEST TEAMS</p> <br>
@@ -67,8 +67,8 @@
             </div>
             <div class="content-area">
                 <div class="content-area__intro-product">
-                    <div>
-                        <img class="timeline" src="./assets/image/timeline.png" alt="timeline"/>
+                    <div style="width: 657px; height: 518px">
+                        <img class="timeline" src="./assets/image/timeline.png" alt="timeline" style="width: 100%; height: 100%"/>
                     </div>
                     <div class="advantage">
                         <div class="survey-feature">
@@ -145,8 +145,8 @@
                         <img src="assets/image/cust-line.png" alt="" style="margin-left: 244px; margin-top: 47px;"/></div>
                     <div class="customers-feedbacks">
                         <div class="customer-pro">
-                            <div>
-                                <img class="customer-ava" src="assets/image/jorge.png" alt=""/>
+                            <div style="width: 48px; height: 48px">
+                                <img class="customer-ava" src="assets/image/jorge.png" alt="" style="width: 100%; height: 100%"/>
                             </div>
                             <div class="name-job">
                                 <p class="name" >Jorge Robertson</p>
@@ -154,8 +154,8 @@
                             </div>
                         </div>
                         <div class="customer-pro">
-                            <div>
-                                <img class="customer-ava" src="assets/image/bell.png" alt=""/>
+                            <div style="width: 48px; height: 48px">
+                                <img class="customer-ava" src="assets/image/bell.png" alt="" style="width: 100%; height: 100%"/>
                             </div>
                             <div class="name-job">
                                 <p class="name">Francisco Bell</p>
@@ -163,8 +163,8 @@
                             </div>
                         </div>
                         <div class="customer-pro">
-                            <div>
-                                <img class="customer-ava" src="assets/image/beth.png" alt=""/>
+                            <div style="width: 48px; height: 48px">
+                                <img class="customer-ava" src="assets/image/beth.png" alt="" style="width: 100%; height: 100%"/>
                             </div>
                             <div class="name-job">
                                 <p class="name" >Beth Fox</p>
