Fix banner__sign-up section

--- a/Practice01/src/index.html
+++ b/Practice01/src/index.html
@@ -18,7 +18,7 @@
                 <nav class="header__nav">
                     <ul class="header__nav-list">
                         <li style="margin-right: 45px; width: 100px;height: 16px;">How it Works <img src="../src/assets/image/down.png" alt="" /></li>
-                        <li style="margin-right: 48px;">Product <img src="../src/assets/image/down.png"/></li>
+                        <li style="margin-right: 48px;">Product <img src="../src/assets/image/down.png" alt=""/></li>
                         <li style="margin-right: 39px;">Pricing </li>
                         <li>Resources <img src="../src/assets/image/down.png" alt =""/></li>
                     </ul>
@@ -33,7 +33,7 @@
                     <p>Save 90%</p>
                 </div>
                 <div class="banner__get-acc">
-                    <p>Get account of $59 <img src="../src/assets/image/arrow.png" alt="get account of $59" /></p> </div>
+                    <p>Get account of $59 <img src="../src/assets/image/arrow.png" alt="get account of $59"/></p>
                 </div>
                 <h1>Manage the team everyone wants to be on</h1>
                 <p class="banner__simple-text">Simple platform that lets you master what great managers do best as   develop trust, collaborate, and drive team performance</p>
@@ -228,7 +228,8 @@
                 </div>
               </footer>
         </div>
-        <script src="../html-inspector.js"></script>
-        <script>HTMLInspector.inspect()</script>
+    </div>
+    <script src="../html-inspector.js"></script>
+    <script>HTMLInspector.inspect()</script>
 </body>
 </html>
