Check code with W3

--- a/Practice01/src/index.html
+++ b/Practice01/src/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -8,7 +9,6 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
     </head>
-    <style></style>
     <body>
         <div class="container">
             <div class="banner" >
@@ -16,10 +16,10 @@
                     <p class="header__logo">team.flow</p>
                     <nav class="header__nav">
                         <ul class="header__nav-list">
-                            <li style="margin-right: 10px;">How it Works <img src="../src/assets/image/down.png" alt="arrow" /></li>
-                            <li style="margin-right: 18px;">Product <img src="../src/assets/image/down.png" alt="arrow"/></li>
+                            <li style="margin-right: 10px;">How it Works <img src="./assets/image/down.png" alt="arrow"></li>
+                            <li style="margin-right: 18px;">Product <img src="./assets/image/down.png" alt="arrow"></li>
                             <li style="margin-right: 19px;">Pricing </li>
-                            <li>Resources <img src="../src/assets/image/down.png" alt ="arrow"/></li>
+                            <li>Resources <img src="./assets/image/down.png" alt ="arrow"></li>
                         </ul>
                     </nav>
                     <div class="header__login-get-free">
@@ -33,7 +33,7 @@
                             <p>Save 90%</p>
                         </div>
                         <div class="banner__get-acc">
-                            <p>Get account of $59 <img src="../src/assets/image/arrow.png" alt="get account of $59"/></p>
+                            <p>Get account of $59 <img src="./assets/image/arrow.png" alt="get account of $59"></p>
                         </div>
                     </div>
                     <div class="banner__content">
@@ -41,30 +41,30 @@
                         <p class="banner__simple-text">Simple platform that lets you master what great managers do best as   develop trust, collaborate, and drive team performance</p>
                     </div>
                     <div class="banner__box">
-                        <input id="text" type="text" placeholder="name@yourcompany.com"/>
-                        <input id="submit"type="submit" value="Try it free"/>
+                        <input id="text" type="text" placeholder="name@yourcompany.com">
+                        <input id="submit" type="submit" value="Try it free">
                     </div>
                     <div style="width: 920px; height: 729.29px">
-                        <img class="graph" src="./assets/image/graph.png" alt="Graph" style="width: 100%; height: 100%"/>
+                        <img class="graph" src="./assets/image/graph.png" alt="Graph">
                     </div>
                     <div class="banner__media-logo">
                         <p class="banner__logo-content">TRUSTED BY OVER <b>10.000+</b> WORLD'S BEST TEAMS</p>
                         <br>
                         <div class="banner__logo">
                             <div style="width: 80px; height: 26.11px;">
-                                <img class="gg" src="assets/image/google.png" alt="google" width="100%" height="100%"/>
+                                <img class="gg" src="assets/image/google.png" alt="google">
                             </div>
                             <div style="width: 80px; height:24.96px" >
-                                <img class="air" src="../src/assets/image/airbnb.png" alt="airbnb" width="100%" height="100%"/>
+                                <img class="air" src="../src/assets/image/airbnb.png" alt="airbnb">
                             </div>
                             <div style="width:77.17px; height: 15.82px" >
-                                <img class="fb" src="./assets/image/fb.png" alt ="facebook" width="100%" height="100%"/>
+                                <img class="fb" src="./assets/image/fb.png" alt ="facebook">
                             </div>
                             <div style="width: 80px;height: 23.3px;">
-                                <img class="hub" src="./assets/image/hubspot.png" alt="hub" width="100%" height="100%"/>
+                                <img class="hub" src="./assets/image/hubspot.png" alt="hub">
                             </div>
                             <div style="width: 80px; height: 20.24px;">
-                                <img class="slack" src="./assets/image/slack.png" alt="slack" width="100%" height="100%"/>
+                                <img class="slack" src="./assets/image/slack.png" alt="slack">
                             </div>
                         </div>
                     </div>
@@ -72,7 +72,7 @@
                 <div class="content-area">
                     <div class="content-area__intro-product">
                         <div style="width: 657px; height: 518px">
-                            <img class="timeline" src="./assets/image/timeline.png" alt="timeline" style="width: 100%; height: 100%"/>
+                            <img class="timeline" src="./assets/image/timeline.png" alt="timeline">
                         </div>
                         <div class="advantage">
                             <div class="survey-feature">
@@ -84,12 +84,12 @@
                             <div class="ad-feature">
                                 <h4>Resolve issues quickly</h4>
                                 <p>Anonymous messaging that connects managers and employees.</p>
-                                <img class="line" src="./assets/image/line-ad-feature.png" alt="line"/>
+                                <img class="line" src="./assets/image/line-ad-feature.png" alt="line">
                             </div>
                             <div class="ad-feature">
                                 <h4>Plan your 1-on-1s</h4>
                                 <p>Plan meetings together and give a stake employees and teams.</p>
-                                <img class="line" src="./assets/image/line-ad-feature.png" alt="line"/>
+                                <img class="line" src="./assets/image/line-ad-feature.png" alt="line">
                             </div>
                             <div class="ad-feature">
                                 <h4>Track your progress</h4>
@@ -102,32 +102,32 @@
                         <br>
                         <div class="feature__container">
                             <div class="feature">
-                                <img src="./assets/image/report.png" alt="Reports"/>
+                                <img src="./assets/image/report.png" alt="Reports">
                                 <h5>Team Surveys & Reports</h5>
                                 <p>Short, anonymous surveys track your team's needs weekly so you can focus</p>
                             </div>
                             <div class="feature">
-                                <img src="./assets/image/collab.png" alt="Collaborative"/>
+                                <img src="./assets/image/collab.png" alt="Collaborative">
                                 <h5>Collaborative 1:1</h5>
                                 <p>Build relationships by planning 1-on-1s and start meetings.</p>
                             </div>
                             <div class="feature">
-                                <img src="./assets/image/center.png" alt="Learning center"/>
+                                <img src="./assets/image/center.png" alt="Learning center">
                                 <h5>Learning Center</h5>
                                 <p>Quickly get solutions tailored to your personal challenges from the manager.</p>
                             </div>
                             <div class="feature">
-                                <img src="./assets/image/mess.png" alt="Messaging"/>
+                                <img src="./assets/image/mess.png" alt="Messaging">
                                 <h5>Anonymous Messaging</h5>
                                 <p>Develop trust in a safe channel for important conversations.</p>
                             </div>
                             <div class="feature">
-                                <img src="./assets/image/conver.png" alt="Conversation"/>
+                                <img src="./assets/image/conver.png" alt="Conversation">
                                 <h5>Conversation Engine</h5>
                                 <p>Communicate confidently with recommended talking points.</p>
                             </div>
                             <div class="feature">
-                                <img src="./assets/image/manage.png" alt="Manager"/>
+                                <img src="./assets/image/manage.png" alt="Manager">
                                 <h5>Exclusives Manager</h5>
                                 <p>Access manager tips, activities and best practices from our team of experts.</p>
                             </div>
@@ -140,7 +140,7 @@
                             <button type="submit">Get started free</button>
                         </div>
                         <div class="chart-image">
-                            <img src="assets/image/charts.png" alt="Charts"/>
+                            <img src="assets/image/charts.png" alt="Charts">
                         </div>
                     </div>
                     <div class="content-area__about-us">
@@ -150,12 +150,12 @@
                         </div>
                         <div class="customers-feedbacks">
                             <div class="customer-pro">
-                                <div class="baseline">
-                                    <img src="assets/image/cust-line.png" alt="baseline" style="width: 100%; height: 100%;"/>
+                                <div class="baseline" style="width: 264px; height: 4px;">
+                                    <img src="assets/image/cust-line.png" alt="baseline">
                                 </div>
                                 <div class="customer-infor">
                                     <div class="customer-ava" style="width: 48px; height: 48px">
-                                        <img  src="assets/image/jorge.png" alt="customer" style="width: 100%; height: 100%"/>
+                                        <img  src="assets/image/jorge.png" alt="customer">
                                     </div>
                                     <div class="name-job">
                                         <p class="name" >Jorge Robertson</p>
@@ -164,12 +164,12 @@
                                 </div>
                             </div>
                             <div class="customer-pro">
-                                <div class="baseline" style="visibility: hidden">
-                                    <img src="assets/image/cust-line.png" alt="baseline" style="width: 100%; height: 100%;"/>
+                                <div class="baseline" style="visibility: hidden; width: 264px; height: 4px">
+                                    <img src="assets/image/cust-line.png" alt="baseline">
                                 </div>
                                 <div class="customer-infor">
                                     <div class="customer-ava"  style="width: 48px; height: 48px">
-                                        <img src="assets/image/bell.png" alt="customer" style="width: 100%; height: 100%"/>
+                                        <img src="assets/image/bell.png" alt="customer">
                                     </div>
                                     <div class="name-job">
                                         <p class="name">Francisco Bell</p>
@@ -178,12 +178,12 @@
                                 </div>
                             </div>
                             <div class="customer-pro">
-                                <div class="baseline" style="visibility: hidden">
-                                    <img src="assets/image/cust-line.png" alt="baseline" style="width: 100%; height: 100%;"/>
+                                <div class="baseline" style="visibility: hidden; width: 264px; height: 4px;">
+                                    <img src="assets/image/cust-line.png" alt="baseline">
                                 </div>
                                 <div class="customer-infor">
                                     <div class="customer-ava" style="width: 48px; height: 48px">
-                                        <img  src="assets/image/beth.png" alt="customer" style="width: 100%; height: 100%"/>
+                                        <img  src="assets/image/beth.png" alt="customer">
                                     </div>
                                     <div class="name-job">
                                         <p class="name" >Beth Fox</p>
@@ -195,8 +195,8 @@
                         <div class="content-area__install-section">
                             <h3 class="install-section-heading" style="width: 423px; height: 96px;">84% of employees who use trust their direct manager</h3>
                             <div class="install-app">
-                                <img class="gg-play" src="./assets/image/ggplay.png" alt="google play"/>
-                                <img class="app-store"src="assets/image/appstore.png" alt="appstore"/>
+                                <img class="gg-play" src="./assets/image/ggplay.png" alt="google play">
+                                <img class="app-store" src="assets/image/appstore.png" alt="appstore">
                             </div>
                         </div>
                     </div>
@@ -231,8 +231,8 @@
                         <div class="app">
                             <h6>Install App</h6>
                             <div class="footer__install-app">
-                                <img class="footer__gg-play" src="assets/image/footer-ggplay.png" alt="google play"/>
-                                <img class="footer__app-store" src="assets/image/footer-appstore.png" alt="appstore"/>
+                                <img class="footer__gg-play" src="assets/image/footer-ggplay.png" alt="google play">
+                                <img class="footer__app-store" src="assets/image/footer-appstore.png" alt="appstore">
                             </div>
                         </div>
                     </div>
@@ -241,16 +241,14 @@
                     <div class="footer__copy-right">
                         <p class="copy-right" style="width: 540px;height: 14px;">© 2020 - All rights reserved</p>
                         <div class="social-icon">
-                            <img class="icon" src="assets/image/ins.png" alt="icon"/>
-                            <img class="icon" src="assets/image/basketball.png" alt="icon"/>
-                            <img class="icon" src="assets/image/twitter.png" alt="icon"/>
-                            <img class="icon" src="assets/image/youtube.png" alt="icon"/>
+                            <img class="icon" src="assets/image/ins.png" alt="icon">
+                            <img class="icon" src="assets/image/basketball.png" alt="icon">
+                            <img class="icon" src="assets/image/twitter.png" alt="icon">
+                            <img class="icon" src="assets/image/youtube.png" alt="icon">
                         </div>
                     </div>
                 </footer>
             </div>
         </div>
-        <script src="../html-inspector.js"></script>
-        <script>HTMLInspector.inspect()</script>
     </body>
 </html>
