--- a/Practice01/src/index.html
+++ b/Practice01/src/index.html
@@ -193,7 +193,7 @@
                             </div>
                         </div>
                         <div class="content-area__install-section">
-                            <h3 class="install-section-heading" style="width: 423px; height: 96px;">84% of employees who use trust their direct manager</h3>
+                            <h3 class="install-section-heading">84% of employees who use trust their direct manager</h3>
                             <div class="install-app">
                                 <img class="gg-play" src="./assets/image/ggplay.png" alt="google play">
                                 <img class="app-store" src="assets/image/appstore.png" alt="appstore">
