update customer feedbacks

--- a/Practice01/src/index.html
+++ b/Practice01/src/index.html
@@ -150,44 +150,44 @@
                         </div>
                         <div class="customers-feedbacks">
                             <div class="customer-pro">
-                                <div class="baseline" style="width: 264px; height: 4px;">
-                                    <img src="assets/image/cust-line.png" alt="baseline">
+                                <div class="baseline">
+                                    <img src="assets/image/cust-line.png" alt="baseline" style="width: 264px; height: 4px;">
                                 </div>
                                 <div class="customer-infor">
-                                    <div class="customer-ava" style="width: 48px; height: 48px">
-                                        <img  src="assets/image/jorge.png" alt="customer">
+                                    <div class="customer-ava" >
+                                        <img  src="assets/image/jorge.png" alt="customer" style="width: 48px; height: 48px">
                                     </div>
                                     <div class="name-job">
-                                        <p class="name" >Jorge Robertson</p>
-                                        <p class="job"> CS at Google</p>
+                                        <p class="name">Jorge Robertson</p>
+                                        <p class="job">CS at Google</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="customer-pro">
-                                <div class="baseline" style="visibility: hidden; width: 264px; height: 4px">
-                                    <img src="assets/image/cust-line.png" alt="baseline">
+                                <div class="baseline" style="visibility: hidden">
+                                    <img src="assets/image/cust-line.png" alt="baseline" style="width: 264px; height: 4px;">
                                 </div>
                                 <div class="customer-infor">
-                                    <div class="customer-ava"  style="width: 48px; height: 48px">
-                                        <img src="assets/image/bell.png" alt="customer">
+                                    <div class="customer-ava"  >
+                                        <img src="assets/image/bell.png" alt="customer" style="width: 48px; height: 48px">
                                     </div>
                                     <div class="name-job">
                                         <p class="name">Francisco Bell</p>
-                                        <p class="job"> Designer at Microsoft</p>
+                                        <p class="job">Designer at Microsoft</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="customer-pro">
-                                <div class="baseline" style="visibility: hidden; width: 264px; height: 4px;">
-                                    <img src="assets/image/cust-line.png" alt="baseline">
+                                <div class="baseline" style="visibility: hidden">
+                                    <img src="assets/image/cust-line.png" alt="baseline" style="width: 264px; height: 4px;">
                                 </div>
                                 <div class="customer-infor">
-                                    <div class="customer-ava" style="width: 48px; height: 48px">
-                                        <img  src="assets/image/beth.png" alt="customer">
+                                    <div class="customer-ava" >
+                                        <img  src="assets/image/beth.png" alt="customer" style="width: 48px; height: 48px">
                                     </div>
                                     <div class="name-job">
-                                        <p class="name" >Beth Fox</p>
-                                        <p class="job"> Developer at Airbnb</p>
+                                        <p class="name">Beth Fox</p>
+                                        <p class="job">Developer at Airbnb</p>
                                     </div>
                                 </div>
                             </div>
